--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-video">
-            <video id="heroVideo" autoplay muted loop playsinline>
+            <video id="heroVideo" muted loop playsinline preload="auto">
                 <source src="video.mp4" type="video/mp4">
                 <!-- Fallback for browsers that don't support video -->
                 <img src="logo.PNG" alt="BAR VADER Logo" class="hero-fallback-img">
             </video>
         </div>
         <div class="hero-content">
+            <div class="hero-description">
+                <div class="star-wars-crawl">
+                    <p class="crawl-text">IN A GALAXY NOT SO FAR AWAY<br>A NEW FORCE AWAKENS</p>
+                </div>
+            </div>
             <div class="hero-text">
                 <h1>BAR VADER</h1>
-                <p class="hero-subtitle">EMBRACE THE DARK SIDE</p>
+                <p class="hero-subtitle">THE ULTIMATE HANGOUT IS ALMOST HERE ...</p>
             </div>
-            <div class="hero-description">
-                <p>Step into the shadows where the Force flows through every drink. Experience the power of the dark side in an atmosphere worthy of the Empire.</p>
-            </div>
+ 
             <div class="hero-buttons">
                 <a href="#menu" class="btn btn-primary">View Menu</a>
                 <a href="#contact" class="btn btn-secondary">Reserve Table</a>
