--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#menu" class="nav-link">Menu</a></li>
+                <li><a href="#entertainment-section" class="nav-link">Entertainment</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -51,8 +51,7 @@
             </div>
  
             <div class="hero-buttons">
-                <a href="#menu" class="btn btn-primary">View Menu</a>
-                <a href="#contact" class="btn btn-secondary">Reserve Table</a>
+                <a href="#entertainment-section" class="btn btn-primary">View Entertainment</a>
             </div>
         </div>
         <div class="stars"></div>
@@ -64,23 +63,23 @@
             <h2 class="section-title">About BAR VADER</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>In the depths of the galaxy, where shadows reign supreme, BAR VADER stands as a testament to the power of the dark side. Our establishment serves only the finest beverages, crafted with the precision of a Sith Lord and the passion of the Empire.</p>
-                    <p>Every drink tells a story of conquest, every cocktail embodies the strength of the Force. Join us in our quest for galactic domination, one sip at a time.</p>
+                    <p>Welcome to BAR VADER - the ultimate hangout spot where the dark side meets good times! Whether you're here to catch the game, challenge friends to pool or darts, or just chill with great music and drinks, we've got you covered.</p>
+                    <p>No reservations needed - just walk in and find your spot. With live sports, gaming tables, rock music, and a chill area, there's something for everyone. Grab a beer, enjoy the vibe, and make it your own.</p>
                     <div class="features">
                         <div class="feature">
-                            <i class="fas fa-skull"></i>
-                            <h3>Dark Atmosphere</h3>
-                            <p>Immersive Star Wars themed environment</p>
+                            <i class="fas fa-tv"></i>
+                            <h3>Live Sports</h3>
+                            <p>Catch all the big games on our screens</p>
                         </div>
                         <div class="feature">
-                            <i class="fas fa-cocktail"></i>
-                            <h3>Premium Drinks</h3>
-                            <p>Handcrafted cocktails with galactic flair</p>
+                            <i class="fas fa-beer"></i>
+                            <h3>Great Drinks</h3>
+                            <p>Beer, spirits, wines - all served here</p>
                         </div>
                         <div class="feature">
-                            <i class="fas fa-music"></i>
-                            <h3>Imperial Music</h3>
-                            <p>John Williams classics and dark side beats</p>
+                            <i class="fas fa-gamepad"></i>
+                            <h3>Gaming & Fun</h3>
+                            <p>Pool, darts, table football and more</p>
                         </div>
                     </div>
                 </div>
@@ -91,129 +90,108 @@
         </div>
     </section>
 
-    <!-- Menu Section -->
-    <section id="menu" class="menu">
+    <!-- Entertainment Section -->
+    <section id="entertainment-section" class="menu">
         <div class="container">
-            <h2 class="section-title">Imperial Menu</h2>
+            <h2 class="section-title">Entertainment & Drinks</h2>
             <div class="menu-categories">
-                <button class="menu-tab active" data-category="cocktails">Cocktails</button>
-                <button class="menu-tab" data-category="beers">Beers</button>
-                <button class="menu-tab" data-category="spirits">Spirits</button>
-                <button class="menu-tab" data-category="food">Food</button>
+                <button class="menu-tab active" data-category="entertainment">Entertainment</button>
+                <button class="menu-tab" data-category="drinks">Drinks</button>
             </div>
             
             <div class="menu-content">
-                <!-- Cocktails -->
-                <div class="menu-category active" id="cocktails">
+                <!-- Entertainment -->
+                <div class="menu-category active" id="entertainment">
                     <div class="menu-items">
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Dark Side Martini</h3>
-                                <p>Vodka, black vodka, dry vermouth, olive</p>
+                                <i class="fas fa-tv" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Live Sports</h3>
+                                <p>Catch all the big games on multiple screens</p>
                             </div>
-                            <span class="price">$18</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Force Lightning</h3>
-                                <p>Blue curaçao, vodka, lemon juice, simple syrup</p>
+                                <i class="fas fa-dice" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Pool Table</h3>
+                                <p>Challenge your friends to a game of pool</p>
                             </div>
-                            <span class="price">$16</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Death Star Destroyer</h3>
-                                <p>Dark rum, coffee liqueur, cream, chocolate</p>
+                                <i class="fas fa-bullseye" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Darts</h3>
+                                <p>Test your aim and precision</p>
                             </div>
-                            <span class="price">$20</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Sith Lord's Revenge</h3>
-                                <p>Whiskey, amaretto, grenadine, orange juice</p>
+                                <i class="fas fa-futbol" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Table Football</h3>
+                                <p>Classic foosball action for all skill levels</p>
                             </div>
-                            <span class="price">$17</span>
+                        </div>
+                        <div class="menu-item">
+                            <div class="item-info">
+                                <i class="fas fa-guitar" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Rock Music</h3>
+                                <p>Live rock music and great vibes</p>
+                            </div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="item-info">
+                                <i class="fas fa-couch" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Chill Area</h3>
+                                <p>Relax and unwind in our comfortable chill zone</p>
+                            </div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="item-info">
+                                <i class="fas fa-gamepad" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Arcade Games</h3>
+                                <p>Classic and modern arcade games for all ages</p>
+                            </div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="item-info">
+                                <i class="fas fa-chess" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Board Games</h3>
+                                <p>Wide selection of board games to enjoy with friends</p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Beers -->
-                <div class="menu-category" id="beers">
+                <!-- Drinks -->
+                <div class="menu-category" id="drinks">
                     <div class="menu-items">
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Imperial Stout</h3>
-                                <p>Dark, rich, and powerful</p>
+                                <i class="fas fa-beer" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Beer</h3>
+                                <p>Wide selection of beers served</p>
                             </div>
-                            <span class="price">$8</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Dark Side Lager</h3>
-                                <p>Smooth and mysterious</p>
+                                <i class="fas fa-wine-glass-alt" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Wines</h3>
+                                <p>Selection of wines available</p>
                             </div>
-                            <span class="price">$7</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Empire IPA</h3>
-                                <p>Bold and commanding</p>
+                                <i class="fas fa-cocktail" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Spirits</h3>
+                                <p>Full range of spirits served</p>
                             </div>
-                            <span class="price">$9</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Spirits -->
-                <div class="menu-category" id="spirits">
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <div class="item-info">
-                                <h3>Single Malt Whiskey</h3>
-                                <p>Aged to perfection</p>
-                            </div>
-                            <span class="price">$25</span>
                         </div>
                         <div class="menu-item">
                             <div class="item-info">
-                                <h3>Dark Rum</h3>
-                                <p>From the depths of the Caribbean</p>
+                                <i class="fas fa-glass-water" style="font-size: 2rem; margin-bottom: 10px; display: block;"></i>
+                                <h3>Soft Drinks</h3>
+                                <p>Various soft drinks and non-alcoholic beverages</p>
                             </div>
-                            <span class="price">$15</span>
-                        </div>
-                        <div class="menu-item">
-                            <div class="item-info">
-                                <h3>Premium Vodka</h3>
-                                <p>Crystal clear and powerful</p>
-                            </div>
-                            <span class="price">$18</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Food -->
-                <div class="menu-category" id="food">
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <div class="item-info">
-                                <h3>Death Star Wings</h3>
-                                <p>Spicy chicken wings with dark sauce</p>
-                            </div>
-                            <span class="price">$14</span>
-                        </div>
-                        <div class="menu-item">
-                            <div class="item-info">
-                                <h3>Imperial Nachos</h3>
-                                <p>Loaded with cheese, jalapeños, and dark meat</p>
-                            </div>
-                            <span class="price">$12</span>
-                        </div>
-                        <div class="menu-item">
-                            <div class="item-info">
-                                <h3>Sith Burger</h3>
-                                <p>Black bun, dark patty, imperial toppings</p>
-                            </div>
-                            <span class="price">$16</span>
                         </div>
                     </div>
                 </div>
@@ -224,67 +202,37 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Join the Empire</h2>
+            <h2 class="section-title">Visit Us</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Location</h3>
-                            <p>123 Dark Side Avenue<br>Galactic City, GC 12345</p>
+                            <p><a href="https://maps.google.com/?q=178+Triq+Manwel+Dimech,+Tas-Sliema+SLM+1058" target="_blank" rel="noopener noreferrer" class="location-link">178 Triq Manwel Dimech<br>Tas-Sliema SLM 1058</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-clock"></i>
                         <div>
                             <h3>Hours</h3>
-                            <p>Mon-Thu: 5PM - 2AM<br>Fri-Sat: 5PM - 3AM<br>Sun: 6PM - 1AM</p>
+                            <p>1PM - 1AM<br>7 Days a Week</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
-                            <h3>Reservations</h3>
-                            <p>(555) DARK-SIDE<br>reservations@barvader.com</p>
+                            <h3>Contact</h3>
+                            <p>+356 7998 6165<br>info@barvader.com</p>
                         </div>
                     </div>
-                </div>
-                <div class="contact-form">
-                    <form id="reservation-form">
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                    <div class="contact-item">
+                        <i class="fas fa-door-open"></i>
+                        <div>
+                            <h3>Walk-Ins Welcome</h3>
+                            <p>No reservations needed<br>Just come in and hang out!</p>
                         </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="tel" id="phone" name="phone" placeholder="Your Phone" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="date" id="date" name="date" required>
-                        </div>
-                        <div class="form-group">
-                            <select id="time" name="time" required>
-                                <option value="">Select Time</option>
-                                <option value="18:00">6:00 PM</option>
-                                <option value="19:00">7:00 PM</option>
-                                <option value="20:00">8:00 PM</option>
-                                <option value="21:00">9:00 PM</option>
-                                <option value="22:00">10:00 PM</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <select id="guests" name="guests" required>
-                                <option value="">Number of Guests</option>
-                                <option value="1">1 Guest</option>
-                                <option value="2">2 Guests</option>
-                                <option value="3">3 Guests</option>
-                                <option value="4">4 Guests</option>
-                                <option value="5+">5+ Guests</option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Reserve Table</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -299,13 +247,12 @@
                     <span>BAR VADER</span>
                 </div>
                 <div class="footer-social">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61581850677790" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/barvader66/#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 BAR VADER. All rights reserved. The Force is strong with this one.</p>
+                <p>&copy; 2025 BAR VADER. All rights reserved. The Force is strong with this one. Created by MB.</p>
             </div>
         </div>
     </footer>
