--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <i class="fas fa-clock"></i>
                         <div>
                             <h3>Hours</h3>
-                            <p>1PM - 1AM<br>7 Days a Week</p>
+                            <p>3PM - Late Night<br>7 Days a Week</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -257,6 +257,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2.0"></script>
 </body>
 </html>
